--- a/Goooal/MainWindow.xaml
+++ b/Goooal/MainWindow.xaml
@@ -4,9 +4,101 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Goooal"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Background="Black" Foreground="LightBlue"
+        WindowStyle="None" WindowState="Maximized"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="0.7*"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Margin="0,40,0,20">
+            <Grid.RowDefinitions>
+                <!--<RowDefinition></RowDefinition>-->
+                <RowDefinition Height="0.8*"></RowDefinition>
+                <RowDefinition Height="4*"></RowDefinition>
+                <RowDefinition Height="0.9*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Viewbox Grid.Row="0">
+                <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="GRANAT">
+                </TextBlock>
+            </Viewbox>
+            <Border Grid.Row="1" BorderBrush="LightBlue" BorderThickness="5" CornerRadius="20" Margin="10">
+                <Viewbox>
+                    <TextBlock Grid.Row="1" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="5">
+                    </TextBlock>
+                </Viewbox>
+            </Border>
+            <Grid Grid.Row="2" Margin="10,0,10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Viewbox Grid.Column="0">
+                    <TextBlock Margin="1" HorizontalAlignment="Center"  
+                            VerticalAlignment="Center" Text="FOULS">
+                    </TextBlock>
+                </Viewbox>
+                <Border Grid.Column="1" BorderBrush="LightBlue" BorderThickness="3" CornerRadius="10">
+                    <Viewbox>
+                        <TextBlock Margin="1" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="3">
+                        </TextBlock>
+                    </Viewbox>
+                </Border>
+            </Grid>
+        </Grid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Image Source=".\images\unnamed.jpg"></Image>
+            <Viewbox Grid.Row="1">
+                <TextBlock Margin="5" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Final">
+                </TextBlock>
+            </Viewbox>
+            <Viewbox Grid.Row="2">
+                <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="12:00" Foreground="Red">
+                </TextBlock>
+            </Viewbox>
+        </Grid>
+        <Grid Grid.Column="2" Margin="0,40,0,20">
+            <Grid.RowDefinitions>
+                <!--<RowDefinition></RowDefinition>-->
+                <RowDefinition Height="0.8*"></RowDefinition>
+                <RowDefinition Height="4*"></RowDefinition>
+                <RowDefinition Height="0.9*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Viewbox Grid.Row="0">
+                <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="GRANAT">
+                </TextBlock>
+            </Viewbox>
+            <Border Grid.Row="1" BorderBrush="LightBlue" BorderThickness="5" CornerRadius="20" Margin="10">
+                <Viewbox>
+                    <TextBlock Grid.Row="1" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="5">
+                    </TextBlock>
+                </Viewbox>
+            </Border>
+            <Grid Grid.Row="2" Margin="10,0,10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Viewbox Grid.Column="0">
+                    <TextBlock Margin="1" HorizontalAlignment="Center"  
+                            VerticalAlignment="Center" Text="FOULS">
+                    </TextBlock>
+                </Viewbox>
+                <Border Grid.Column="1" BorderBrush="LightBlue" BorderThickness="3" CornerRadius="10">
+                    <Viewbox>
+                        <TextBlock Margin="1" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="3">
+                        </TextBlock>
+                    </Viewbox>
+                </Border>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
