--- a/Goooal/MainWindow.xaml
+++ b/Goooal/MainWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d" Background="Black" Foreground="LightBlue"
         WindowStyle="None" WindowState="Maximized"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <local:TimeSpanConverter x:Key="tsConverter"></local:TimeSpanConverter>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -24,7 +27,7 @@
                 <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Team1}">
                 </TextBlock>
             </Viewbox>
-            <Border Grid.Row="1" BorderBrush="LightBlue" BorderThickness="5" CornerRadius="20" Margin="10">
+            <Border Grid.Row="1" BorderBrush="LightBlue" BorderThickness="5" CornerRadius="20" Margin="10" Name="tbScore1">
                 <Viewbox>
                     <TextBlock Grid.Row="1" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="{Binding Score1}">
                     </TextBlock>
@@ -62,13 +65,12 @@
             </Viewbox>
             <Viewbox Grid.Row="2">
                 <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" 
-                           Text="{Binding TimeString}" Foreground="Red">
+                           Text="{Binding Interval, Converter={StaticResource tsConverter}}" Foreground="Red">
                 </TextBlock>
             </Viewbox>
         </Grid>
         <Grid Grid.Column="2" Margin="0,40,0,20">
             <Grid.RowDefinitions>
-                <!--<RowDefinition></RowDefinition>-->
                 <RowDefinition Height="0.8*"></RowDefinition>
                 <RowDefinition Height="4*"></RowDefinition>
                 <RowDefinition Height="0.9*"></RowDefinition>
@@ -77,7 +79,25 @@
                 <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Team2}">
                 </TextBlock>
             </Viewbox>
-            <Border Grid.Row="1" BorderBrush="LightBlue" BorderThickness="5" CornerRadius="20" Margin="10">
+            <Border Grid.Row="1" BorderBrush="LightBlue" BorderThickness="5" CornerRadius="20" Margin="10" Name="tbScore2">
+                <Border.InputBindings>
+                    <MouseBinding
+                        MouseAction="LeftClick"
+                        Command="{Binding Score2IncCommand}">
+                    </MouseBinding>
+                    <MouseBinding
+                        MouseAction="RightClick"
+                        Command="{Binding Score2DecCommand}">
+                    </MouseBinding>
+                    <KeyBinding 
+                        Key="F5" 
+                        Command="{Binding Score2DecCommand}">
+                    </KeyBinding>
+                    <KeyBinding 
+                        Key="F6" 
+                        Command="{Binding Score2IncCommand}">
+                    </KeyBinding>
+                </Border.InputBindings>
                 <Viewbox>
                     <TextBlock Grid.Row="1" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="{Binding Score2}">
                     </TextBlock>
