--- a/Goooal/EditDataView.xaml
+++ b/Goooal/EditDataView.xaml
@@ -5,48 +5,58 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Goooal"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
+        BorderBrush="White" BorderThickness="2"
+        WindowStyle="ToolWindow" Foreground="White" Background="Black"
         Title="Игра" SizeToContent="Height" Width="400">
-    <Grid>
-        <Grid Margin="15,15,15,15">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0">
-                <Label>Команда-1</Label>
-                <local:ClickSelectTextBox
+    <Window.Resources>
+        <Style TargetType="Label">
+            <Setter Property="Foreground" Value="White"></Setter>
+        </Style>
+    </Window.Resources>
+    <Viewbox>
+        <Grid>
+            <Grid Margin="15,15,15,15">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0">
+                    <Label>Команда-1</Label>
+                    <local:ClickSelectTextBox
                     Text="{Binding Path=Team1, ValidatesOnDataErrors=True, 
                     UpdateSourceTrigger=PropertyChanged}" MaxLength="50">
-                </local:ClickSelectTextBox>
-            </StackPanel>
-            <StackPanel Grid.Row="1">
-                <Label>Команда-2</Label>
-                <local:ClickSelectTextBox
+                    </local:ClickSelectTextBox>
+                </StackPanel>
+                <StackPanel Grid.Row="1">
+                    <Label>Команда-2</Label>
+                    <local:ClickSelectTextBox
                     Text="{Binding Path=Team2, ValidatesOnDataErrors=True, 
                     UpdateSourceTrigger=PropertyChanged}" MaxLength="50">
-                </local:ClickSelectTextBox>
-            </StackPanel>
-            <StackPanel Grid.Row="2">
-                <Label>Название игры</Label>
-                <local:ClickSelectTextBox
+                    </local:ClickSelectTextBox>
+                </StackPanel>
+                <StackPanel Grid.Row="2">
+                    <Label>Название игры</Label>
+                    <local:ClickSelectTextBox
                     Text="{Binding Path=PlayName, ValidatesOnDataErrors=True, 
                     UpdateSourceTrigger=PropertyChanged}" MaxLength="50">
-                </local:ClickSelectTextBox>
-            </StackPanel>
-            <StackPanel Grid.Row="3">
-                <Label>Кол-во минут</Label>
-                <local:ClickSelectTextBox
+                    </local:ClickSelectTextBox>
+                </StackPanel>
+                <StackPanel Grid.Row="3">
+                    <Label>Кол-во минут</Label>
+                    <local:ClickSelectTextBox
                     Text="{Binding Path=Minutes, ValidatesOnDataErrors=True, 
                     UpdateSourceTrigger=PropertyChanged}" MaxLength="50">
-                </local:ClickSelectTextBox>
-            </StackPanel>
-            <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Width="60" Margin="10" IsDefault="True" Click="Ok_Click">ОК</Button>
-                <Button Width="60" Margin="10">Отмена</Button>
-            </StackPanel>
+                    </local:ClickSelectTextBox>
+                </StackPanel>
+                <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Width="60" Margin="10" IsDefault="True" Click="Ok_Click">ОК</Button>
+                    <Button Width="60" Margin="10">Отмена</Button>
+                </StackPanel>
+            </Grid>
         </Grid>
-    </Grid>
+    </Viewbox>
 </Window>
