--- a/Goooal/MainWindow.xaml
+++ b/Goooal/MainWindow.xaml
@@ -135,7 +135,10 @@
             </Viewbox>
             <Viewbox Grid.Row="2">
                 <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" 
-                           Text="{Binding Interval, Converter={StaticResource tsConverter}}" Foreground="Red">
+                           Text="{Binding Interval, Converter={StaticResource tsConverter}}">
+                    <TextBlock.Triggers>
+                        <DataTrigger Binding="{}"
+                    </TextBlock.Triggers>
                 </TextBlock>
             </Viewbox>
         </Grid>
