--- a/Goooal/MainWindow.xaml
+++ b/Goooal/MainWindow.xaml
@@ -9,22 +9,22 @@
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         <local:TimeSpanConverter x:Key="tsConverter"></local:TimeSpanConverter>
-        <Storyboard x:Key="flashAnimation">
+        <!--<Storyboard x:Key="flashAnimation">
             <DoubleAnimation Storyboard.TargetProperty="Opacity" 
                                      From="1" To="0" AutoReverse="True" Duration="0:0:0.4" 
                                      RepeatBehavior="Forever"></DoubleAnimation>
-        </Storyboard>
+        </Storyboard>-->
         <Style x:Key="Timer" TargetType="TextBlock">
             <Style.Triggers>
                 <DataTrigger Binding="{Binding EnabledTimer}"
                         Value="False">
                     <Setter Property="Foreground" Value="Red"></Setter>
-                    <DataTrigger.EnterActions>
+                    <!--<DataTrigger.EnterActions>
                         <BeginStoryboard Name="flash" Storyboard="{StaticResource flashAnimation}"></BeginStoryboard>
                     </DataTrigger.EnterActions>
                     <DataTrigger.ExitActions>
                         <StopStoryboard BeginStoryboardName="flash"></StopStoryboard>
-                    </DataTrigger.ExitActions>
+                    </DataTrigger.ExitActions>-->
                 </DataTrigger>
             </Style.Triggers>
         </Style>
