--- a/Goooal/MainWindow.xaml
+++ b/Goooal/MainWindow.xaml
@@ -9,22 +9,20 @@
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         <local:TimeSpanConverter x:Key="tsConverter"></local:TimeSpanConverter>
-        <!--<Storyboard x:Key="flashAnimation">
-            <DoubleAnimation Storyboard.TargetProperty="Opacity" 
-                                     From="1" To="0" AutoReverse="True" Duration="0:0:0.4" 
-                                     RepeatBehavior="Forever"></DoubleAnimation>
-        </Storyboard>-->
+        <local:TimeSpanConverter_1 x:Key="tsConverter_1"></local:TimeSpanConverter_1>
         <Style x:Key="Timer" TargetType="TextBlock">
             <Style.Triggers>
                 <DataTrigger Binding="{Binding EnabledTimer}"
                         Value="False">
                     <Setter Property="Foreground" Value="Red"></Setter>
-                    <!--<DataTrigger.EnterActions>
-                        <BeginStoryboard Name="flash" Storyboard="{StaticResource flashAnimation}"></BeginStoryboard>
-                    </DataTrigger.EnterActions>
-                    <DataTrigger.ExitActions>
-                        <StopStoryboard BeginStoryboardName="flash"></StopStoryboard>
-                    </DataTrigger.ExitActions>-->
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="Timer_1" TargetType="TextBlock">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding EnabledTimer_1}"
+                        Value="False">
+                    <Setter Property="Visibility"  Value="Hidden"></Setter>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -78,6 +76,14 @@
                         Key="F1"
                         Command="{Binding HelpCommand}">
         </KeyBinding>
+        <KeyBinding 
+                        Key="Z"
+                        Command="{Binding SwitchTimer_1Command}">
+        </KeyBinding>
+        <!--<KeyBinding 
+                        Key="X"
+                        Command="{Binding ResetTimer_1Command}">
+        </KeyBinding>-->
     </Window.InputBindings>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -155,6 +161,11 @@
             <Viewbox Grid.Row="2">
                 <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" 
                            Style="{StaticResource Timer}" Text="{Binding Interval, Converter={StaticResource tsConverter}}">
+                </TextBlock>
+            </Viewbox>
+            <Viewbox Grid.Row="3">
+                <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           Style="{StaticResource Timer_1}" Text="{Binding Interval_1, Converter={StaticResource tsConverter_1}}">
                 </TextBlock>
             </Viewbox>
         </Grid>
