--- a/Goooal/MainWindow.xaml
+++ b/Goooal/MainWindow.xaml
@@ -186,7 +186,7 @@
                 <TextBlock Margin="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Team2}">
                 </TextBlock>
             </Viewbox>
-            <Border Grid.Row="1" BorderBrush="LightBlue" BorderThickness="5" CornerRadius="20" Margin="10" Name="tbScore2">
+            <Border Grid.Row="1" BorderBrush="{Binding NormalTextColor}" BorderThickness="5" CornerRadius="20" Margin="10" Name="tbScore2">
                 <Border.InputBindings>
                     <MouseBinding
                         MouseAction="LeftClick"
